--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@types/node": "^22.13.5",
+        "dotenv": "^16.4.7",
         "fs": "^0.0.1-security",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3"
